kustomizer/tests/kustomizer/testdata/reference/json-patch-ingress/kustomization.yaml
resources:
- ingress.yaml
patches:
- path: ingress_patch.json
  target:
    group: networking.k8s.io
    version: v1beta1
    kind: Ingress
    name: my-ingress
